infrastructure/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: familiar-faces
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.7.0 
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: familiar-faces
spec:
  selector:
    app: kafka
  ports:
  - name: client
    protocol: TCP
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
