infrastructure/eureka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-ingress
  namespace: familiar-faces
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: eureka.193.187.94.176.sslip.io  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery-service
            port:
              number: 8761
