infrastructure/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: familiar-faces
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kibana.193.187.94.176.sslip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
